src/index.css
/* ... */
.skillsCard > div:nth-child(4):after,
.skillsCard > div:nth-child(7):after {
  background-image: linear-gradient(
    -48deg,
    rgba(0, 188, 128) 0%,
    rgba(2, 204, 71) 54%,
    rgba(3, 220, 13) 100%
  );
}

.skillsCard > div > div {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: var(--defaultgap);
  z-index: 2;
}

.skillsCard > div > div > p:nth-child(2) {
  font-size: var(--h1);
  font-weight: bold;
  margin: 20px 0;
}

.skillsCard > div img,
.skillsCard > div svg {
  height: 80px;
  color: white;
}

div.qualDiv,
div.contactDiv,
div.galleryDiv {
  background-color: var(--lvl2Color);
}

.eduCard {
  text-align: left;
  display: flex;
  justify-content: space-between;
  margin-top: var(--defaultgap);
  flex-wrap: wrap;
}

.eduCard > div {
  width: 32%;
  padding: var(--defaultgap) 30px;
  box-sizing: border-box;
  font-size: var(--h5);
  background-color: var(--lvl3Color);
  box-shadow: 0px 1px 5px 0px rgb(0 0 0 / 50%);
  margin-bottom: 15px;
}

.eduCard > div > p:nth-child(1) {
  font-size: var(--h2);
  color: white;
  font-weight: bold;
  margin: 15px 0;
}

.eduCard > div > p:last-child {
  margin-bottom: 0;
}

.workExDesp {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: var(--defaultgap);
}

.workExDesp > div {
  width: 20%;
  font-size: var(--h4);
  display: flex;
  text-align: left;
  align-items: center;
  justify-content: center;
}

.workExDesp > div > span {
  font-size: 50px;
  margin-right: 15px;
  color: var(--activeColor);
}

.workCol {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 50px;
}

.workCard {
  text-align: left;
  background-color: var(--lvl3Color);
  padding: 30px;
  font-size: var(--h5);
  display: flex;
  width: 48%;
  margin: 2% 0%;
  /* min-height: 220px; */
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  border-bottom: 4px solid var(--activeColor);
  line-height: 1.4;
}

.workCard img {
  width: 130px;
  margin-right: 5%;
}

.workCard p {
  margin: 0;
  font-size: var(--h2);
  color: white;
  font-weight: bold;
  text-transform: initial;
}

.workCard > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-transform: uppercase;
}

.workOverlay {
  position: absolute;
  right: 0;
  left: 0;
  height: 0px;
  bottom: 0;
  box-sizing: border-box;
  transition: height 0.3s;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  background: var(--activeColor);
  overflow: auto;
  line-height: 1;
}

.workOverlay > div {
  font-size: var(--h5);
  font-weight: 600;
  padding-bottom: 10px;
  text-transform: uppercase;
}

.workCard:hover .workOverlay {
  height: 100%;
  padding: 15px 30px;
  color: var(--lvl2Color);
}

.contactDiv > div:last-child {
  display: flex;
  text-align: left;
  flex-wrap: wrap;
}

.contactInfo {
  min-width: 35%;
  max-width: 35%;
  font-size: var(--h4);
  text-transform: uppercase;
}

.contactInfo td {
  padding: 8px 0;
  font-size: var(--h4);
  text-transform: initial;
}

.contactInfo td svg {
  vertical-align: middle;
}

.contactInfo table {
  margin: 20px 0px;
}

.contactForm {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  min-width: 65%;
  max-width: 65%;
}

.contactForm > div {
  min-width: 31%;
  max-width: 31%;
  display: flex;
  flex-direction: column;
  text-transform: uppercase;
  margin-bottom: var(--defaultgap);
}

.contactForm input,
.contactForm textarea {
  min-height: 20px;
  border-radius: 2px;
  padding: 20px;
  font-size: var(--h5);
  border: none;
  outline: none;
  margin-top: 15px;
  resize: none;
  background: var(--lvl3Color);
  color: #cccccc;
  font-family: "Maven Pro", sans-serif;
}

.erroredField {
  box-sizing: border-box;
  border-bottom: 2px solid red !important;
}

.contactForm > div:nth-last-child(2) {
  min-width: 100%;
  max-width: 100%;
  margin: 0;
}

.achDiv {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 50px;
  margin-top: 100px;
}

.achCard {
  display: flex;
  min-width: 18%;
  max-width: 18%;
  box-shadow: 0px 1px 5px 0px rgb(255 255 255 / 50%);
  flex-direction: column;
  align-items: center;
  position: relative;
  background-image: linear-gradient(180deg, #21d4fd 0%, #b721ff 100%);
  padding-bottom: 20px;
  color: white;
  font-size: var(--h5);
  text-align: center;
  margin-bottom: 30px;
}

.achCard > div:first-child {
  width: 120px;
  height: 120px;
  box-sizing: border-box;
  position: absolute;
  top: -60px;
  border-radius: 50%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 40%;
  background-color: white;
  /* border: 10px solid var(--activeColor); */
  border-right: 0;
  /* box-shadow: 0px 0px 7px 11px rgb(255 255 255 / 50%); */
  border-top: 0;
  transition: all 0.1s;
}

.achCard:hover > div:first-child {
  background-size: 55%;
  box-shadow: 0px 0px 7px 11px rgb(255 255 255 / 50%);
}

.achCard > div:nth-child(2) {
  height: 130px;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  font-size: var(--h3);
  font-weight: bolder;
  width: 100%;
  border-radius: 0 0 30% 30%;
  padding: 15px;
  box-sizing: border-box;
  margin-bottom: 20px;
  background-color: white;
  color: var(--lvl3Color);
  padding-top: 65px;
}

.achCard > div:last-child {
  padding: 10px;
}

div.galleryCard {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: 250px;
  grid-auto-flow: dense;
}

.galleryCard img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.galleryCard .yCover {
  grid-column: span 2;
}
.galleryCard .xCover {
  grid-row: span 2;
}
.galleryCard .bigCover {
  grid-column: span 2;
  grid-row: span 2;
}

.skillsPartition {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  margin-top: 40px;
}
.techSkillDiv {
  display: flex;
  margin-bottom: 10px;
  background-color: white;
  color: black;
}
/* ... */

